constantes, servicios y funcion para cambiar de lenguage, falta aplicarlo a todos los controladores y templates

--- a/WebLegemClient/src/common/components/wl-lista-tipo-doc/wl-lista-tipo-doc.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-tipo-doc/wl-lista-tipo-doc.tmpl.html
@@ -1,5 +1,5 @@
 ﻿<div>    
-    <label class="texto_labels" style="margin-top:10px;">Lista de Tipo de Documentos </label>    
+    <label class="texto_labels" style="margin-top:10px;">{{ vm.language.strings.listadoTiposDocumento }}</label>    
     <input type="text" ng-model="vm.filtro" class="a_input" />
     
     <ul class="a_listado" style="width: 100%">     
