--- a/WebLegemClient/src/app/anotacion/anotacion.tmpl.html
+++ b/WebLegemClient/src/app/anotacion/anotacion.tmpl.html
@@ -6,19 +6,19 @@
 
         <div class="contenedor_tabs">
             <ul>
-                <li ui-sref="usuarios.control-roles"
+                <li ui-sref="anotacion.crear-anotacion"
                         ng-class="vm.$state.current.name =='usuarios.control-roles' ? 'active_tab' : ''"
                         ng-click="vm.tabActivo($event);">
                     <span class="ico-cogs">
-                        <a>ROLES</a>
+                        <a>CREAR ANOTACION</a>
                     </span>
                 </li>
-                <li ui-sref="usuarios.control-usuarios" ng-click="vm.activo($event);"
+                <!--<li ui-sref="usuarios.control-usuarios" ng-click="vm.activo($event);"
                         ng-class="vm.$state.current.name =='usuarios.control-usuarios' ? 'active_tab' : ''">
                     <span class="ico-users">
                         <a>USUARIOS</a>
                     </span>
-                </li>                
+                </li>-->                
             </ul>
         </div>
         <div ui-view></div>
