--- a/WebLegemClient/src/app/login/login.tmpl.html
+++ b/WebLegemClient/src/app/login/login.tmpl.html
@@ -26,7 +26,7 @@
 
             <!----------------------------------------------------->
             <div ng-messages ng-show="form_login.password.$invalid">
-                <div class="a_validacion" ng-message ng-show="form_login.password.$dirty">Complete este campo.</div>
+                <div class="msj-error" ng-message ng-show="form_login.password.$dirty">Complete este campo.</div>
             </div>
 
             <div class="box_input_ico inputs_login">
@@ -42,7 +42,7 @@
 
 
             <div>
-                <div class="a_validacion" style="padding-bottom:10px; color:#444">* Campos obligatorios.</div>
+                <div class="msj-error" style="padding-bottom:10px; color:#444">* Campos obligatorios.</div>
             </div>
 
             <div class="a_centrado">
