--- a/WebLegemClient/src/css/elementos/input_text.css
+++ b/WebLegemClient/src/css/elementos/input_text.css
@@ -13,7 +13,7 @@
 .input_text_ico     /*Input con icono como en filtros busqueda ó como el de login*/
 {
     padding: 0 10px;
-    border:1px solid #bbb; 
+    border:1px solid #aaa; 
     width:100%;
     height:35px;
 }
