--- a/WebLegemClient/src/css/elementos/select.css
+++ b/WebLegemClient/src/css/elementos/select.css
@@ -21,7 +21,7 @@
     width:100%;
     height:35px;
     overflow:hidden;
-    border:1px solid #999;
+    border:1px solid #aaa;
     padding:0 10px;
 }
 
@@ -39,6 +39,10 @@
         pointer-events:none;
     }
 
+
+    .a_select select:hover{
+        border:1px solid #888;
+    }
     .a_select:hover::before{
         color:#099472;
     }
