interfacez andres anotaciones

--- a/WebLegemClient/src/app/anotacion/crear-anotacion/crear-anotacion.tmpl.html
+++ b/WebLegemClient/src/app/anotacion/crear-anotacion/crear-anotacion.tmpl.html
@@ -1,64 +1,99 @@
-﻿<div class="box_father">
+﻿<div ng-show="vm.ban_manual">
+    <!-- pasos para anotacion manual -->
+    <wl-progreso id="anotacionmanual" pasos="vm.pasos" actual="vm.actual" id-progreso="anotacionmanual"></wl-progreso>
 
-    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1-->
-    <div class="box_left">
-        <!----------------------------------------------------------------------------------------------------------------------->
-        <label class="texto_labels">seleccionar documento</label>
-        <div>
-            <label class="subtitulos_labels animacion_filtro" ng-show="!vm.entidadEmisora ">Entidad emisora</label>
-            <div class="a_select">
-                <select type="text" ng-options="entidad.nombre as entidad.nombre for entidad in vm.entidades | orderBy: 'nombre'"
-                        ng-model="vm.entidadEmisoraAux"></select>
-            </div>
-        </div>
-        <!----------------------------------------------------------------------------------------------------------------------->
-        <label class="subtitulos_labels animacion_filtro" ng-show="!vm.tipoDocumento">Tipo de documento</label>
-        <div>
-            <div class="a_select">
-                <select type="text" placeholder="Escriba entidad emisora" ng-model="vm.tipoDocumentoAux"
-                        ng-options="tipoDocumento.nombre as tipoDocumento.nombre for tipoDocumento in vm.tiposDocumento| orderBy: 'nombre'"></select>
-            </div>
-        </div>
-        <!----------------------------------------------------------------------------------------------------------------------->
-        <label class="subtitulos_labels animacion_filtro" ng-show="!vm.numero">Número de documento</label>
-        <div>
-            <input type="text" class="a_input" maxlength="10"
-                   name="numero" id="numero" ng-model="vm.numeroAux"
-                   placeholder="Escriba número de documento" />
-        </div>
-        <!----------------------------------------------------------------------------------------------------------------------->
-        <label class="subtitulos_labels animacion_filtro" ng-show="!vm.anioPublicacion ">Año de publicación</label>
-        <div>
-            <input type="text" class="a_input" maxlength="4"
-                   name="anioPublicacion" id="anioPublicacion" ng-model="vm.anioPublicacionAux"
-                   placeholder="Escriba año de publicación" />
-        </div>
-        <!----------------------------------------------------------------------------------------------------------------------->
-        <div>
-            <button class="btn_sin_ico">Buscar</button>
+    <!---------------------------------------------------------------------------------------------------------------------Paso1-->
+    <div class="box_father ani-pasos" ng-show="vm.index==0">
+        <div class=" box_left">
+            <label class="ca_label_busqueda">seleccionar documento que anota:</label>
+            <wl-buscar-doc>  </wl-buscar-doc>
         </div>
 
-        <!----------------------------------------------------------------------------------------------------------------------->
-        <label class="msj-error">
-            No se encontro ningun documento con esa identificacion
-        </label>
-
-
+        <div class="box_right">
+            <label class="msj-error"> No se encontro ningun documento con esa identificacion </label>
+            <wl-lista-doc-encontrado>  </wl-lista-doc-encontrado>
+        </div>
     </div>
 
+    <!---------------------------------------------------------------------------------------------------------------------Paso2-->
 
-    <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~2-->
-    <div class="box_right">
-        <div class="documento_actual">
-            <div>
-                <span class="ico-file-text-o"></span>
+    <div class="box_father ani-pasos" ng-show="vm.index==1">
+        <div class="box_left">
+            <label class="ca_label_busqueda" ng-if="!vm.ban_crear_doc">seleccione el documento al cual se anotará:</label>
+            <label class="ca_label_busqueda" ng-if="vm.ban_crear_doc">complete los datos para crear el documento:</label>
+
+            <wl-buscar-doc crear-doc="vm.ban_crear_doc">  </wl-buscar-doc>
+        </div>
+        <div class="box_right">
+            <label class="msj-error">
+                No se encontro ningun documento con esa identificacion, desea crear un
+                <a ng-click="vm.ban_crear_doc = true" href="" title="Crear documento"> nuevo documento</a>
+            </label>
+
+            <wl-lista-doc-encontrado ng-hide="vm.ban_crear_doc" ban-crear-anotacion="vm.ban_crear_ano">  </wl-lista-doc-encontrado>
+
+            <div class="generic-box-vertical" ng-if="vm.ban_crear_doc || vm.ban_crear_ano">
+                <div>
+                    <label class="texto_labels">Tipo de Anotación:</label>
+                    <div class="a_select">
+                        <select type="text" placeholder="Escriba entidad emisora" ng-model="vm.tipoDocumentoAux"
+                                ng-options="tipoDocumento.nombre as tipoDocumento.nombre for tipoDocumento in vm.tiposDocumento| orderBy: 'nombre'"></select>
+                    </div>
+                </div>
+                <div>
+                    <label class="texto_labels">Descripcion de la Anotación:</label>
+                    <textarea class="a_text_area"></textarea>
+                </div>
             </div>
-            <div>
-                <p>{{datos.tipoDocumento }} {{datos.numero }} del {{datos.fecha }}</p>
-                <p> Entidad Emisora: <i>{{datos.entidad}}</i></p>
-                <p> Fecha de publicacion: <i>{{datos.fecha}}</i></p>
+
+        </div>
+    </div>
+
+    <!---------------------------------------------------------------------------------------------------------------------Controles-->
+
+    <div class="box_father">
+        <div class="box_right">
+            <div class="divisor-pasos"><div></div></div>
+            <div class="controles-crear-anotacion">
+                <button class="btn_sin_ico" ng-click="vm.backStep()" ng-hide="vm.index==0">
+                    Atras
+                </button>
+                <button class="btn_sin_ico" ng-click="vm.nextStep()" ng-hide="vm.index==1">
+                    Siguiente
+                </button>
+                <button class="btn_sin_ico" ng-click="vm.crearAnotacion()" ng-show="vm.index==1">
+                    Crear Anotacion
+                </button>
             </div>
         </div>
-
     </div>
+
+</div>
+
+
+<!--dialogos-->
+
+<wl-info show="vm.ban_exito_anotacion" title="Exito">
+    <div class="a-modal-contenido">
+        <span class="ico-check-circle verde"></span>
+        <div>Se ha creado una Anotacion </div>
+    </div>
+</wl-info>
+
+
+<!--dialogo para respuesta de anotacion asistida-->
+<!-- ---------------------------------------------------------------------- -->
+<wl-info show="vm.ban_wait_response" title="Confirmación">
+    <div class="a-modal-contenido">
+        <span class="ico-question gris"></span>
+        <div>Desea utilizar el asistente de anotaciones?</div>
+    </div>
+    <div class="a-modal-confirmacion">
+        <button value="confirmar" ng-click="vm.aceptarAsistida()">Confirmar</button>
+        <button ng-click="vm.negarAsistida()">Continuar manualmente</button>
+    </div>
+</wl-info>
+
+<div ng-hide="vm.ban_manual">
+    <wl-anotacion-asistida ban-manual="vm.ban_manual"></wl-anotacion-asistida>
 </div>
