--- a/WebLegemClient/src/css/plantillas/layout_general.css
+++ b/WebLegemClient/src/css/plantillas/layout_general.css
@@ -41,7 +41,9 @@
         margin-bottom: 10px;
     }
 
-
+    .flex-1{flex:1!important}
+    .flex-2{flex:2!important}
+    .flex-3{flex:3!important}
 
 .tapiz {
     display: flex;
