--- a/WebLegemClient/src/app/anotacion/anotacion.tmpl.html
+++ b/WebLegemClient/src/app/anotacion/anotacion.tmpl.html
@@ -1,4 +1,4 @@
-﻿<div class="tapiz">
+﻿<div class="tapiz" >
 
     <div style="height:100px;"></div>
 
@@ -6,19 +6,29 @@
 
         <div class="contenedor_tabs">
             <ul>
+
                 <li ui-sref="anotacion.crear-anotacion"
-                        ng-class="vm.$state.current.name =='usuarios.control-roles' ? 'active_tab' : ''"
-                        ng-click="vm.tabActivo($event);">
-                    <span class="ico-cogs">
+                    ng-class="vm.$state.current.name =='anotacion.crear-anotacion' ? 'active_tab' : ''"
+                    ng-click="vm.tabActivo($event);">
+                    <span class="ico-plus">
                         <a>CREAR ANOTACION</a>
                     </span>
                 </li>
-                <!--<li ui-sref="usuarios.control-usuarios" ng-click="vm.activo($event);"
-                        ng-class="vm.$state.current.name =='usuarios.control-usuarios' ? 'active_tab' : ''">
-                    <span class="ico-users">
-                        <a>USUARIOS</a>
+                <li ui-sref="anotacion.eliminar-anotacion"
+                    ng-class="vm.$state.current.name =='anotacion.eliminar-anotacion' ? 'active_tab' : ''"
+                    ng-click="vm.tabActivo($event);">
+                    <span class="ico-trash">
+                        <a>ElIMINAR ANOTACION</a>
                     </span>
-                </li>-->                
+                </li>
+                <li ui-sref="anotacion.editar-anotacion"
+                    ng-class="vm.$state.current.name =='anotacion.editar-anotacion' ? 'active_tab' : ''"
+                    ng-click="vm.tabActivo($event);">
+                    <span class="ico-pencil">
+                        <a>EDITAR ANOTACION</a>
+                    </span>
+                </li>
+
             </ul>
         </div>
         <div ui-view></div>
