--- a/WebLegemClient/src/app/gestion-documental/anotacion/crear-anotacion.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/anotacion/crear-anotacion.tmpl.html
@@ -1,48 +1,14 @@
-﻿<div class="tapiz_contenido">
+﻿<div class="box_father animatio ng-enter">
+    <div class="box_right">
+        <label class="texto_labels bold">
+            Crear Anotacion
+        </label>
+        <hr class="divisor_gestion_documental" />
 
-    <div class="titulo_ventana">
-        <span class="ico-file-o">
-            <p>Crear Anotacion</p>
-        </span>
+
     </div>
 
-    <div class="box_child" style="display:flex;flex-direction:column;">
-
-        <div style="display:flex; justify-content:space-between; flex-wrap:wrap;">
-            <div style="flex:1; margin-right:50px;">
-                <p>seleccione el documento al cual desea realizar la anotacion</p>
-
-                <label>Numero de documento </label><input type="text" class="a_input" />
-                <label>Tipo de documento </label><input type="text" class="a_input" />
-                <label>Entidad Emisora </label><input type="text" class="a_input" />
-                <label>Año de expedición </label><input type="text" class="a_input" />
-
-                <button class="btn_sin_ico"> verificar </button>
-            </div>
-            
-            <div style="flex:1;">
-                <p>seleccione el documento al cual desea anotar</p>
-
-                <label>Numero de documento </label><input type="text" class="a_input" />
-                <label>Tipo de documento </label><input type="text" class="a_input" />
-                <label>Entidad Emisora </label><input type="text" class="a_input" />
-                <label>Año de expedición </label><input type="text" class="a_input" />
-
-
-                <button class="btn_sin_ico"> verificar </button>
-            </div>
-        </div>
-
-        <div>
-            <p>Comple los campos para realizar la anotacion</p>
-
-
-            <label>Tipo de anotacion </label><input type="text" class="a_input" />
-            <label>Descripcion anotacion</label><textarea class="a_input"></textarea>
-
-
-        </div>
-
-    </div>
 
 </div>
+
+
