--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -1,42 +1,55 @@
-﻿<div class="contenido_gd animatio ng-enter" id="holas">
-    <label class="titulo">Crear Documento</label>
-    <div>
-        <label class="subtitulos_labels">
+﻿<div class="box_father animatio ng-enter">
+    <div class="box_right">
+        <label class="texto_labels bold">
             Identificacion del documento
         </label>
         <hr class="divisor_gestion_documental" />
-        <form id="informacion_documento">
-            <div class="zzz">
-                <label class="texto_labels" for="entidad" ng-model="vm.documento.entidad">Entidad:</label>
-                <div>
-                    <select id="entidad" class="select zzz" ng-options="entidad as entidad.nombre for entidad in vm.entidades | orderBy: 'nombre'" ng-model="vm.documento.entidad">
-                        <option ng-repeat="entidad in vm.entidades">{{ entidad.nombre }}</option>
-                    </select>
-                    <span class="span_select ico-angle-down"></span>
-                </div>
-            </div>
-            <div class="a_1">
-                <label class="texto_labels" for="tipo-documento">Tipo de Documento:</label>
-                <div>
-                    <select id="tipo-documento" class="select" ng-options="tipo as tipo.nombre for tipo in vm.documento.entidad.tipoEntidad.documentosSoportados | orderBy: 'nombre'" ng-model="vm.documento.tipoDocumento">
-                        <option ng-repeat="tipo in vm.tiposDocumento">{{ tipo.nombre }}</option>
-                    </select>
-                    <span class="span_select zzz ico-angle-down"></span>
-                </div>
-            </div>
-            
-            <div class="b_1">
-                <label class="texto_labels" for="numero">Numero:</label>
-                <input class="a_input " type="text" id="numero" ng-model="vm.documento.numero" />
-            </div>
-            <div class="b_1">
-                <label class="texto_labels" for="año">Fecha Publicación:</label>                
-                <input class="a_input" type="date" id="exampleInput" name="input" ng-model="vm.documento.fechaPublicacion"
-                       placeholder="yyyy-MM-dd" min="2013-01-01" max="2020-12-31" required />                
-            </div>
 
-        </form>
-        <div class="contenedor_back_next">
+            <table class="tabla_info_doc">
+                <!------------------------------------------------------------------------------------------------------------------------------------------------>
+                <tr>
+                    <td><label class="texto_labels" for="entidad" ng-model="vm.documento.entidad">Entidad:</label></td>
+                    <td>
+                        <div class="a_select">
+                            <select id="entidad" ng-model="vm.documento.entidad"
+                                    ng-options="entidad as entidad.nombre for entidad in vm.entidades | orderBy: 'nombre'"></select>
+                        </div>
+                    </td>
+                </tr>
+                <!------------------------------------------------------------------------------------------------------------------------------------------------>
+                <tr>
+                    <td><label class="texto_labels" for="tipo-documento">Tipo de Documento:</label></td>
+                    <td>
+                        <div class="a_select">
+                            <select id="tipo-documento" ng-model="vm.documento.tipoDocumento"
+                                    ng-options="tipo as tipo.nombre for tipo in vm.documento.entidad.tipoEntidad.documentosSoportados | orderBy: 'nombre'"></select>
+                        </div>
+                    </td>
+                </tr>
+                <!------------------------------------------------------------------------------------------------------------------------------------------------>
+                <tr>
+                    <td><label class="texto_labels" for="numero">Numero:</label></td>
+                    <td>
+                        <input class="a_input " type="text" id="numero" ng-model="vm.documento.numero" />
+                    </td>
+                </tr>
+                <tr>
+                    <td><label class="texto_labels" for="año">Fecha Publicación:</label></td>
+                    <td>
+                        <input class="a_input" type="date" id="exampleInput" name="input" ng-model="vm.documento.fechaPublicacion"
+                               placeholder="yyyy-MM-dd" min="2013-01-01" max="2020-12-31" required />
+                    </td>
+                </tr>
+                <!------------------------------------------------------------------------------------------------------------------------------------------------>
+            </table>
+    </div>
+</div>
+
+<!---------------------------------------------------------------------------------------------------------------------Controles-->
+<div class="box_father">
+    <div class="box_right">
+        <div class="divisor-pasos"><div></div></div>
+        <div class="controles-crear-anotacion">
             <button class="btn_con_ico" ui-sref="gestion-documental.crear-documento.subir-archivo">
                 <span class="ico-chevron-left tamano_botones_1"></span>Atras
             </button>
@@ -44,6 +57,6 @@
                 Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
         </div>
-        <p>{{ vm.error }}</p>
+        <!--<p>{{ vm.error }}</p> creo q no sirve pa nada -->
     </div>
 </div>
