--- a/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
@@ -1,17 +1,12 @@
-﻿<div class="contenido_gd animatio ng-enter">
+﻿<div class="box_father animatio ng-enter" ng-controller="uploaderController as an">
+    <div class="box_right">
 
-    <div class="titulo_ventana">
-        <span class="ico-file-o">
-            <p>Crear Documento</p>
-        </span>
-    </div>
-
-    <div class="box-contenido-gd" ng-controller="uploaderController as an">
-        <label class="subtitulos_labels">
+        <label class="texto_labels bold">
             Subir Documento
         </label>
         <hr class="divisor_gestion_documental" />
-        <form>
+
+        <form style="padding:0 20px;">
             <label class="uploader" id="fileOutput" nv-file-drop uploader="vm.uploader">
                 <span id="ico_no_cargado" class="icon ico-upload"></span>
                 <span id="ico_cargado" class="icon ico-check"></span>
@@ -30,8 +25,15 @@
             </button>
             <br />
         </form>
+    </div>
+</div>
 
-        <div style="display: flex; justify-content: flex-end;">
+<!---------------------------------------------------------------------------------------------------------------------Controles-->
+
+<div class="box_father">
+    <div class="box_right">
+        <div class="divisor-pasos"><div></div></div>
+        <div class="controles-crear-anotacion">
             <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.informacion-documento">
                 Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
@@ -44,4 +46,5 @@
         </div>
     </div>
 </div>
+
 
