--- a/WebLegemClient/src/css/elementos/tabla.css
+++ b/WebLegemClient/src/css/elementos/tabla.css
@@ -7,7 +7,7 @@
     overflow-x:auto;
 }
 
-.a_tabla th,td{
+.a_tabla th,.a_tabla td{
     padding:8px 15px;
     text-align:left;
     border-top:1px solid #ccc;
