--- a/WebLegemClient/src/css/plantillas/informacion_documento.css
+++ b/WebLegemClient/src/css/plantillas/informacion_documento.css
@@ -1,44 +1,16 @@
-﻿#informacion_documento {
-    width: 100%;
-
-    display: flex;
-    display: -webkit-flex;
-    -ms-flex-direction: row;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    
-    justify-content:space-between;
-    margin:50px 0;
-    margin-bottom:60px;
+﻿.tabla_info_doc{
+    margin:20px 0;
+    border:none;
 }
 
-.a_1{
-    flex-basis: 260px;
+.tabla_info_doc td{
+    padding:8px 15px;
 }
 
-.zzz {
-    flex-basis: 300px;
+.tabla_info_doc tr td:last-child{
+    width:400px;
+    height:100%;
 }
-
-.a_1 > div > select,.zzz > div > select {
-    width:95%;
+.tabla_info_doc tr td:last-child > div,input{
+    width:100%;
 }
-
-
-.b_1 input{
-    margin:10px 0;
-    width:150px;
-}
-
-.contenedor_back_next {
-    display: flex;
-    -ms-flex-direction: row;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    justify-content: flex-end;
-}
-
-.contenedor_back_next button{
-    margin-right:10px;
-}
-
